# claude-requirements-framework

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-framework-progress.json  ruff.toml  sync-versions.sh  sync.sh  update-plugin-versions.sh
.claude/: github-issues.md  re-enablement-ledger.md  requirements.yaml
.claude-plugin/: marketplace.json
.serena/: project.yml
docs/: PLUGIN-INSTALLATION.md  README-REQUIREMENTS-FRAMEWORK.md  STATUSLINE.md  adr-reviewed-requirement.md  implementation-plan.md  installation-friction-points.md  req-init-examples.md
examples/: global-requirements.yaml  project-requirements.yaml
github-issues-plugin/: plugin.json
golden_set/: README.md
hooks/: _langfuse_hook.py  auto-satisfy-skills.py  check-requirements.py  clear-single-use.py  handle-git-events.py  handle-permission-request.py  handle-plan-enter.py  handle-plan-exit.py  handle-pre-compact.py  handle-prompt-submit.py  handle-session-end.py  handle-session-start.py  handle-stop.py  handle-subagent-start.py  handle-task-completed.py  handle-teammate-idle.py  handle-tool-failure.py  langfuse-trace.py  requirements-cli.py  ruff_check.py  test_branch_size_calculator.py  test_diff_scope.py  test_requirements.py
infra/: .env.example  docker-compose.qdrant.yml  docker-compose.yml
messages/: debugging_systematic.yaml  design_approved.yaml  plan_written.yaml  verification_evidence.yaml
plugin/: README.md
scripts/: bootstrap_qdrant.py  build_plugin_hooks.py  pre-commit-check.sh  prepare-diff-scope  render_prompts.py  run_eval.py  setup_langfuse_tracing.py  sync_golden_set_to_langfuse.py  sync_langfuse_models.py  sync_prompts_to_langfuse.py
tests/: test_aggregator.py  test_budget.py  test_check_requirements_strict.py  test_claude_wrapper.py  test_code_reviewer_worker.py  test_embedder.py  test_eval.py  test_fanout.py  test_langfuse_hook_enrichment.py  test_langfuse_trace_hook.py  test_memory.py  test_observability.py  test_partials.py  test_preflight.py  test_prompts.py  test_render.py  test_render_prompts.py  test_retrieval.py  test_review_cli.py  test_schemas.py  (+11 more)
(+523 files in other folders)
